--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -1,20 +1,20 @@
 <!-- Forgot Password Template-->
 <div class="col-sm-6 col-md-4 col-md-offset-4">
     <div class="max350">
-    <div class="panel">
-        <div class="panel-body panel-body-login">
-            <div>
+        <div class="panel">
+            <div class="panel-body panel-body-login">
                 <div>
-                    <label for="password">Ingresa nuevo password</label>
-                    <input class="form-control" type="password" ng-model="password" placeholder="Password" id="password">
+                    <div>
+                        <label for="username">Ingresa tu usuario</label>
+                        <input class="form-control" type="text" ng-model="username" placeholder="Username" id="username">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="panel-footer">
-            <button ng-click="doChange();" class="btn btn-lg btn-block btn-mzc">
-                Resetear login password
-            </button>
+            <div class="panel-footer">
+                <button ng-click="sent();" class="btn btn-lg btn-block btn-mzc">
+                    Enviar
+                </button>
+            </div>
         </div>
     </div>
-</div>
 </div>
