--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,11 @@
                         ng-model="username">
                     <input type="password" class="form-control" placeholder="Password" required
                         ng-model="password">
+
+                    <a href="#/forgot">
+                        ¿Olvidaste tu password?
+                    </a>
+
                     <button class="btn btn-lg btn-block btn-mzc" type="submit" ng-click="login()">
                         Login</button>
                     <h4>¿No tienes cuenta?</h4>
