Se agrega paginacion en el web (integrado con backend)

--- a/templates/after_login/stress.html
+++ b/templates/after_login/stress.html
@@ -31,6 +31,16 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="text-center">
+                <a href="" ng-click="previousPageStress()">
+                    <i class="fa fa-angle-left fa-2x"></i>
+                </a>
+
+                <a href="" ng-click="nextPageStress()">
+                    <i class="fa fa-angle-right fa-2x"></i>
+                </a>
+            </div>
         </div>
 
         <div class="row col-md-offset-5 col-md-2 col-md-offset-5">
