--- a/templates/after_login/corporate-solution.html
+++ b/templates/after_login/corporate-solution.html
@@ -32,6 +32,16 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="text-center">
+                <a href="" ng-click="previousPage()">
+                    <i class="fa fa-angle-left fa-2x"></i>
+                </a>
+
+                <a href="" ng-click="nextPage()">
+                    <i class="fa fa-angle-right fa-2x"></i>
+                </a>
+            </div>
         </div>
 
 
