--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -41,6 +41,16 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="text-center">
+                <a href="" ng-click="previousPage()">
+                    <i class="fa fa-angle-left fa-2x"></i>
+                </a>
+
+                <a href="" ng-click="nextPage()">
+                    <i class="fa fa-angle-right fa-2x"></i>
+                </a>
+            </div>
         </div>
 
         <div class="row col-md-offset-5 col-md-2 col-md-offset-5">
