--- a/templates/after_login/minfulness.html
+++ b/templates/after_login/minfulness.html
@@ -35,6 +35,16 @@
                 </tr>
                 </tbody>
             </table>
+
+            <div class="text-center">
+                <a href="" ng-click="previousPage()">
+                    <i class="fa fa-angle-left fa-2x"></i>
+                </a>
+
+                <a href="" ng-click="nextPage()">
+                    <i class="fa fa-angle-right fa-2x"></i>
+                </a>
+            </div>
         </div>
 
         <div class="row col-md-offset-5 col-md-2 col-md-offset-5">
@@ -96,7 +106,7 @@
                     <input type="text" class="form-control" placeholder="Descripción" required autofocus
                            ng-model="descriptionExercise" id="descriptionEjercise">
 
-                    <input type="text" class="form-control" placeholder="URL del audio" required autofocus
+                    <input type="text" class="form-control" placeholder="URL del audio (Youtube)" required autofocus
                            ng-model="urlAudio">
 
                     <input type="text" class="form-control" placeholder="Instrucciones" required autofocus
