--- a/templates/after_login/corporate-solution.html
+++ b/templates/after_login/corporate-solution.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3>SOLUCIONES COOPERATIVAS</h3>
+            <h3 style="color:#d05821;">SOLUCIONES COOPERATIVAS</h3>
         </div>
 
         <div class="row">
