--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3>INFORMACIÓN ESENCIAL</h3>
+            <h3 style="color:#d05821;">INFORMACIÓN ESENCIAL</h3>
         </div>
 
         <div class="row">
