--- a/templates/after_login/freetime.html
+++ b/templates/after_login/freetime.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3>OCIO Y TIEMPO LIBRE</h3>
+            <h3 style="color:#d05821;">OCIO Y TIEMPO LIBRE</h3>
         </div>
 
         <!-- HEADER -->
