--- a/templates/after_login/personalization.html
+++ b/templates/after_login/personalization.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3>PERSONALIZACIÓN</h3>
+            <h3 style="color:#d05821;">PERSONALIZACIÓN</h3>
         </div>
 
         <div class="row">
