--- a/templates/after_login/recomendations.html
+++ b/templates/after_login/recomendations.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3>RECOMENDACIONES DEL COACH PARA LOS USUARIOS</h3>
+            <h3 style="color:#d05821;">RECOMENDACIONES DEL COACH PARA LOS USUARIOS</h3>
         </div>
 
         <div class="row col-md-offset-3 col-md-6 col-md-offset-3">
