--- a/templates/after_login/minfulness.html
+++ b/templates/after_login/minfulness.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-center">
         <div class="row">
-            <h3 style="color:#d05821;">BIENESTAR / MINFUNLESS</h3>
+            <h3 style="color:#d05821;">BIENESTAR / MINDFUNLESS</h3>
         </div>
 
         <div class="row">
