Se realizan todas las correcciones en el web indicadas por Cesar

--- a/templates/after_login/corporate-solution.html
+++ b/templates/after_login/corporate-solution.html
@@ -57,7 +57,7 @@
                     <div class="modal-body">
 
                         <h4><strong>Creador:</strong> {{currentDilemma.nick_user}}</h4>
-                        <h4><strong>Fecha de creación:</strong> {{currentDilemma.date}}</h4>
+                        <h4><strong>Fecha de creación:</strong> {{currentDilemma.date | date}}</h4>
                         <hr>
                         <h4><strong>Descripción:</strong> {{currentDilemma.description}}</h4>
 
