--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -72,10 +72,10 @@
                     <input type="text" class="form-control" placeholder="Nombre" required autofocus
                            ng-model="nameVideo">
 
-                    <input type="text" class="form-control" placeholder="URL del video" required autofocus
+                    <input type="text" class="form-control" placeholder="URL del video (YOUTUBE)" required autofocus
                            ng-model="urlVideo">
 
-                    <input type="text" class="form-control" placeholder="URL de la portada" required autofocus
+                    <input type="text" class="form-control" placeholder="URL de la portada (IMAGEN)" required autofocus
                            ng-model="photoUrl">
 
                     <label for="dateVideo">Fecha de publicación</label>
