--- a/templates/after_login/minfulness.html
+++ b/templates/after_login/minfulness.html
@@ -71,7 +71,7 @@
                     <input type="date" class="form-control" ng-model="date" id="date">
 
                     <hr>
-                    <h4>**Agregar Ejercicios</h4>
+                    <h4>**Agregar Ejercicios (Un plan debe tener 8 semanas)</h4>
 
                     <a href="" data-toggle="collapse" data-target="#helpExercise">
                         <i class="fa fa-info-circle"> Ayuda</i>
@@ -106,7 +106,7 @@
                     <input type="text" class="form-control" placeholder="Descripción" required autofocus
                            ng-model="descriptionExercise" id="descriptionEjercise">
 
-                    <input type="text" class="form-control" placeholder="URL del audio (Youtube)" required autofocus
+                    <input type="text" class="form-control" placeholder="URL del audio (YOUTUBE)" required autofocus
                            ng-model="urlAudio">
 
                     <input type="text" class="form-control" placeholder="Instrucciones" required autofocus
