video tests: 3 answer choices are mandatory

--- a/templates/after_login/essential-information.html
+++ b/templates/after_login/essential-information.html
@@ -159,17 +159,18 @@
                         <h6>Para agregar una pregunta con sus respuestas, debes seguir los siguientes pasos:</h6>
                         <ul>
                             <li><h6>1. (Obligatorio) Escribir la descripción de la pregunta</h6></li>
-                            <li><h6>2. (Obligatorio) Escribir una respuesta para la pregunta, en el caso de que la respuesta
+                            <li><h6>2. (Obligatorio) Escribir 3 respuestas</h6></li>
+                            <li><h6>3. (Obligatorio) Escribir una respuesta para la pregunta, en el caso de que la respuesta
                                     sea la correcta, se debe marcar el check "Es la respuesta correcta"</h6></li>
-                            <li><h6>3. (Obligatorio) Dar click en el icono <i class="fa fa-plus-circle"></i></h6></li>
-                            <li><h6>4. (Opcional) Ingresar otra respuesta y dar click en el icono
+                            <li><h6>4. (Obligatorio) Dar click en el icono <i class="fa fa-plus-circle"></i></h6></li>
+                            <li><h6>5. (Opcional) Ingresar otra respuesta y dar click en el icono
                                 <i class="fa fa-plus-circle"></i>, puedes ingresar las respuestas que desees</h6>
                             </li>
-                            <li><h6>5. (Obligatorio) Cuando ya no desees agregar mas respuestas, debes dar click en el
+                            <li><h6>6. (Obligatorio) Cuando ya no desees agregar mas respuestas, debes dar click en el
                                 icono <i class="fa fa-check"></i> y de esa manera podras volver a registrar una siguiente
                                 pregunta</h6>
                             </li>
-                            <li><h6>6. Finalmente para guardar toda la encuesta, debes dar click en el boton Guardar</h6></li>
+                            <li><h6>7. Finalmente para guardar toda la encuesta, debes dar click en el boton Guardar</h6></li>
                         </ul>
                     </div>
 
